<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rajatiit.admin_app.Login">

    <EditText
        android:id="@+id/username"
        android:background="@drawable/input_layout"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:hint="@string/username_text"
        android:imeOptions="actionNext"
        android:cursorVisible="false"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:paddingLeft="40dp"
        android:paddingRight="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/colorGray"
        android:textCursorDrawable="@null"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/password"
        android:background="@drawable/input_layout"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/password_text"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="40dp"
        android:paddingRight="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/colorGray"
        android:textCursorDrawable="@null"
        android:textSize="20dp" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/password"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin_text"
            android:onClick="selectUser" />

        <RadioButton
            android:id="@+id/teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher_text"
            android:onClick="selectUser" />

        <RadioButton
            android:id="@+id/batch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/batch_text"
            android:onClick="selectUser" />

    </RadioGroup>

    <Button
        android:id="@+id/login"
        android:background="@drawable/button_layout"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/password"
        android:layout_marginTop="70dp"
        android:text="@string/login_text"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp" />

</RelativeLayout>
